--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -11,6 +11,10 @@ RUN \
 
 COPY rootfs/ /
 
-EXPOSE 80 443
+RUN /fix-permissions.sh
+
+EXPOSE 8080 4443
 
 VOLUME ["/config", "/etc/letsencrypt", "/usr/share/jitsi-meet/transcripts"]
+
+USER 1001
