--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -2,9 +2,11 @@ FROM debian:stretch-slim
 
 ARG JITSI_RELEASE=stable
 
-ADD https://github.com/just-containers/s6-overlay/releases/download/v1.21.4.0/s6-overlay-amd64.tar.gz /tmp/s6-overlay.tar.gz
+ENV S6_READ_ONLY_ROOT 1
+
+ADD https://github.com/just-containers/s6-overlay/releases/download/v1.22.1.0/s6-overlay-amd64.tar.gz /tmp/s6-overlay.tar.gz
 ADD https://download.jitsi.org/jitsi-key.gpg.key /tmp/jitsi.key
-ADD https://github.com/subchen/frep/releases/download/v1.3.5/frep-1.3.5-linux-amd64 /usr/bin/frep
+ADD https://github.com/subchen/frep/releases/download/v1.3.7/frep-1.3.7-linux-amd64 /usr/bin/frep
 
 COPY rootfs /
 
@@ -20,13 +22,9 @@ RUN \
 	apt-dpkg-wrap apt-get update && \
 	apt-dpkg-wrap apt-get dist-upgrade -y && \
 	apt-cleanup && \
-	chmod +x /usr/bin/frep
+	chmod +x /usr/bin/frep && \
+	/install-devtools.sh
 
-RUN \
-	[ "$JITSI_RELEASE" = "unstable" ] && \
-	apt-dpkg-wrap apt-get update && \
-	apt-dpkg-wrap apt-get install -y jq procps curl vim iputils-ping net-tools && \
-	apt-cleanup || \
-	true
+RUN mkdir /config
 
-ENTRYPOINT [ "/init" ]
+ENTRYPOINT [ "/pre-init.sh" ]
