misc: add etherpad and transcription settings to openshift template

--- a/okd/config/jitsi-configmap.yaml
+++ b/okd/config/jitsi-configmap.yaml
@@ -10,9 +10,11 @@ objects:
     ENABLE_GUESTS: ${ENABLE_GUESTS}
     ENABLE_LETSENCRYPT: ${ENABLE_LETSENCRYPT}
     ENABLE_HTTP_REDIRECT: ${ENABLE_HTTP_REDIRECT}
+    ENABLE_TRANSCRIPTIONS: ${ENABLE_TRANSCRIPTIONS}
     DISABLE_HTTPS: ${DISABLE_HTTPS}
     LETSENCRYPT_DOMAIN: ${HOSTNAME}
     LETSENCRYPT_EMAIL: ${LETSENCRYPT_EMAIL}
+    PUBLIC_URL: ${HOSTNAME}
     XMPP_DOMAIN: ${HOSTNAME}
     XMPP_AUTH_DOMAIN: "auth.${HOSTNAME}"
     XMPP_GUEST_DOMAIN: "guest.${HOSTNAME}"
@@ -36,6 +38,9 @@ objects:
     JIGASI_SIP_KEEP_ALIVE_METHOD: ${JIGASI_SIP_KEEP_ALIVE_METHOD}
     JIGASI_HEALTH_CHECK_SIP_URI: ${JIGASI_HEALTH_CHECK_SIP_URI}
     JIGASI_HEALTH_CHECK_INTERVAL: ${JIGASI_HEALTH_CHECK_INTERVAL}
+    JIGASI_TRANSCRIBER_RECORD_AUDIO: ${JIGASI_TRANSCRIBER_RECORD_AUDIO}
+    JIGASI_TRANSCRIBER_SEND_TXT: ${JIGASI_TRANSCRIBER_SEND_TXT}
+    JIGASI_TRANSCRIBER_ADVERTISE_URL: ${JIGASI_TRANSCRIBER_ADVERTISE_URL}
     JWT_APP_ID: ${JWT_APP_ID}
     JWT_ACCEPTED_ISSUERS: ${JWT_ACCEPTED_ISSUERS}
     JWT_ACCEPTED_AUDIENCES: ${JWT_ACCEPTED_AUDIENCES}
