--- a/okd/config/jitsi-secret.yaml
+++ b/okd/config/jitsi-secret.yaml
@@ -16,3 +16,9 @@ objects:
     JWT_APP_SECRET: ${JWT_APP_SECRET}
     LDAP_BINDDN: ${LDAP_BINDDN}
     LDAP_BINDPW: ${LDAP_BINDPW}
+    GC_PROJECT_ID: ${GC_PROJECT_ID}
+    GC_PRIVATE_KEY_ID: ${GC_PRIVATE_KEY_ID}
+    GC_PRIVATE_KEY: ${GC_PRIVATE_KEY}
+    GC_CLIENT_EMAIL: ${GC_CLIENT_EMAIL}
+    GC_CLIENT_ID: ${GC_CLIENT_ID}
+    GC_CLIENT_CERT_URL: ${GC_CLIENT_CERT_URL}
