Add styke docker repo

--- a/okd/jicofo/jicofo-deployment.yaml
+++ b/okd/jicofo/jicofo-deployment.yaml
@@ -40,7 +40,7 @@ objects:
             periodSeconds: 3
           ports:
           - containerPort: 8888
-          image: jitsi/jicofo
+          image: styke/jicofo
           imagePullPolicy: Always
           name: jicofo
           resources: {}
