misc: add new prosody configs to okd templates

--- a/okd/config/jitsi-configmap.yaml
+++ b/okd/config/jitsi-configmap.yaml
@@ -6,6 +6,7 @@ objects:
     name: jitsi-config
   data:
     TZ: ${TZ}
+    LOG_LEVEL: ${LOG_LEVEL}
     ENABLE_AUTH: ${ENABLE_AUTH}
     ENABLE_GUESTS: ${ENABLE_GUESTS}
     ENABLE_LETSENCRYPT: ${ENABLE_LETSENCRYPT}
@@ -23,6 +24,7 @@ objects:
     XMPP_MODULES: ${XMPP_MODULES}
     XMPP_MUC_MODULES: ${XMPP_MUC_MODULES}
     XMPP_INTERNAL_MUC_MODULES: ${XMPP_INTERNAL_MUC_MODULES}
+    GLOABL_MODULES: ${XMPP_MODULES}
     JVB_BREWERY_MUC: ${JVB_BREWERY_MUC}
     JVB_TCP_HARVESTER_DISABLED: ${JVB_TCP_HARVESTER_DISABLED}
     JVB_STUN_SERVERS: ${JVB_STUN_SERVERS}
@@ -44,6 +46,10 @@ objects:
     JWT_APP_ID: ${JWT_APP_ID}
     JWT_ACCEPTED_ISSUERS: ${JWT_ACCEPTED_ISSUERS}
     JWT_ACCEPTED_AUDIENCES: ${JWT_ACCEPTED_AUDIENCES}
+    JWT_ASAP_KEYSERVER: ${JWT_ASAP_KEYSERVER}
+    JWT_ALLOW_EMPTY: ${JWT_ALLOW_EMPTY}
+    JWT_AUTH_TYPE: ${JWT_AUTH_TYPE}
+    JWT_TOKEN_AUTH_MODULE: ${JWT_TOKEN_AUTH_MODULE}
     LDAP_URL: ${LDAP_URL}
     LDAP_BASE: ${LDAP_BASE}
     LDAP_FILTER: ${LDAP_FILTER}
